@@ -1,5 +1,6 @@
 package com.example.p3.dtos;
 
+import com.example.p3.dtos.toolsDto.ToolUrlName;
 import com.example.p3.entities.Tag;
 import com.example.p3.entities.Tool;
 import lombok.Data;
@@ -11,13 +12,13 @@ import java.util.stream.Collectors;
 public class TagDto {
     private Integer id;
     private String value;
-    private List<String> tools;
+    private List<ToolUrlName> tools;
 
     public TagDto(Tag t) {
         this.id = t.getId();
         this.value = t.getValue();
         this.tools = t.getTagTools().stream()
-                .map(Tool::getName)
-                .collect(Collectors.toList());
+                .map(Tool -> new ToolUrlName(Tool.getName(), Tool.getUrl(), Tool.getIs_dynamic()))
+                .toList();
     }
 }
